--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="logo col-sm-6"><a href="https://irwingcom.github.io/HW-21/"><img src="img/logo.png" alt=""></a></div>
                 <div class="cat col-sm-2"><a href="https://irwingcom.github.io/started/">Getting Started</a></div>
                 <div class="cat col-sm-2">Improving Art</div>
-                <div class="cat col-sm-2"><a href="#">What's Next?</a></div>
+                <div class="cat col-sm-2"><a href="https://irwingcom.github.io/next/">What's Next?</a></div>
             </div>
         </div>
     </nav>
